Fix build process

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name trail.prixite.com;
+    server_name supberballx.com;
 
     location / {
         add_header Service-Worker-Allowed /;
