--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: ./docker/Dockerfile
     volumes:
       - static_volume:/app/client/build
+    command: npm run build
 
   nginx:
     build:
