--- a/.github/workflows/react-deploy.yml
+++ b/.github/workflows/react-deploy.yml
@@ -36,4 +36,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
             branch: deploy # The branch the action should deploy to.
-            folder: out # The folder the action should deploy.
+            folder: build # The folder the action should deploy.
