--- a/.github/workflows/react-deploy.yml
+++ b/.github/workflows/react-deploy.yml
@@ -17,7 +17,7 @@ jobs:
       DISABLE_ESLINT_PLUGIN: true
       NODE_ENV: "development"
       REACT_APP_ENV: "development"
-      SEND_BLUE_SECRET_KEY: ${{ secrets.SENDIN_BLUE }}
+      REACT_APP_SENDINBLUE_API_KEY: ${{ secrets.SENDIN_BLUE }}
     steps:
       - uses: actions/checkout@v3
 
